# Todo_app_backend

./: alembic.ini  docker-compose.yml  init_db.sql  pyproject.toml
alembic/: env.py
alembic/versions/: 0001_initial_schema.py  0002_remove_remaining_minutes.py
app/: .example.env  config.py  database.py  main.py
app/api/: router.py
app/api/endpoints/: auth.py  hello.py  tasks.py
app/middleware/: telemetry.py
app/models/: database.py
app/schemas/: auth.py
app/services/: auth.py  jwt.py  tasks.py
